# bortfeld_function_adai_adam

./: README.md  compare.m
python_ver/: CMakeLists.txt  readme.txt  test.py
python_ver/src/: BortfeldFunction_py.cpp  bp.cpp  bp.h
